fix width of hops.png on smaller screens

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -48,6 +48,7 @@ p.first.admonition-title {
     margin-top: 3px;
     margin-bottom: 3px;
     margin-right: 20px;
+    width: 120px;
 }
 
 @media only screen and (max-width: 500px) {
